force-app/main/default/objects/Case/fields/Accommodation__c.field-meta.xml
<CustomField>
    <fullName>Accommodation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checklist item for external referrals</description>
    <inlineHelpText>Checklist for external referral</inlineHelpText>
    <label>Accommodation</label>
    <type>Checkbox</type>
</CustomField>