force-app/main/default/objects/Case/fields/Account_18_Digit_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_18_Digit_ID__c</fullName>
    <formula>Account.Accounts_18_Digit_Id__c</formula>
    <label>Account 18 Digit ID</label>
    <type>Text</type>
</CustomField>