force-app/main/default/objects/Case/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <description>Account Status field values populated at the time of the creation of this Contact. These values was mapped to the &quot;Contact Status&quot; on the Contact or the &quot;Account Status&quot; field on the Account but this field does not automatically map anymore</description>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bereaved Family - permission to contact</fullName>
            </value>
            <value>
                <fullName>Bereaved Family - on hold</fullName>
            </value>
            <value>
                <fullName>Do Not Contact</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Opt-in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>