force-app/main/default/objects/Case/fields/Allied_Health__c.field-meta.xml
<CustomField>
    <fullName>Allied_Health__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checklist for external referral</description>
    <inlineHelpText>Checklist for external referral</inlineHelpText>
    <label>Allied Health</label>
    <type>Checkbox</type>
</CustomField>