force-app/main/default/objects/Case/fields/Boxes_of_strips_provided__c.field-meta.xml
<CustomField>
    <fullName>Boxes_of_strips_provided__c</fullName>
    <label>Boxes of strips provided</label>
    <length>255</length>
    <type>Text</type>
</CustomField>