force-app/main/default/objects/Case/fields/Cardiology_Service__c.field-meta.xml
<CustomField>
    <fullName>Cardiology_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checklist for external referral</description>
    <inlineHelpText>Checklist for external referral</inlineHelpText>
    <label>Cardiology Service</label>
    <type>Checkbox</type>
</CustomField>