force-app/main/default/objects/Case/fields/Case_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Case_Created_By__c</fullName>
    <description>Name of HK staff member who created this record in eTapestry - for use on pre-2021 records only</description>
    <inlineHelpText>Name of HK staff member who created this record in eTapestry - for use on pre-2021 records only</inlineHelpText>
    <label>Case Created By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>