force-app/main/default/objects/Case/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Hospital</fullName>
                <default>true</default>
                <label>In Hospital</label>
            </value>
            <value>
                <fullName>ECIP Program</fullName>
            </value>
            <value>
                <fullName>Helpline</fullName>
            </value>
            <value>
                <fullName>In patient</fullName>
                <isActive>false</isActive>
                <label>In Patient</label>
            </value>
            <value>
                <fullName>Out patient</fullName>
                <isActive>false</isActive>
                <label>Out patient</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>