force-app/main/default/objects/Case/fields/Consent_to_Acknowledge_Support_for_Annua__c.field-meta.xml
<CustomField>
    <fullName>Consent_to_Acknowledge_Support_for_Annua__c</fullName>
    <description>eTapestry data brought across from old Journal Contact Entries</description>
    <label>Consent to Acknowledge Support for Annua</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No thank you</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>