force-app/main/default/objects/Case/fields/Contact_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Contact_Purpose__c</fullName>
    <label>Contact Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>