force-app/main/default/objects/Case/fields/Contact_s_18_Digit_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_s_18_Digit_ID__c</fullName>
    <formula>Contact.Contacts_18_Digit_Id__c</formula>
    <label>Contact&apos;s 18 Digit ID</label>
    <type>Text</type>
</CustomField>