force-app/main/default/objects/Case/fields/Contact_s_HH_Account_18_Digit_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_s_HH_Account_18_Digit_ID__c</fullName>
    <formula>Contact.Account.Accounts_18_Digit_Id__c</formula>
    <label>Contact&apos;s HH Account 18 Digit ID</label>
    <type>Text</type>
</CustomField>