force-app/main/default/objects/Case/fields/Contract_and_Consent_Signed__c.field-meta.xml
<CustomField>
    <fullName>Contract_and_Consent_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is the contract for the ECIP program</description>
    <inlineHelpText>This is the contract for the ECIP program</inlineHelpText>
    <label>Contract and Consent Signed</label>
    <type>Checkbox</type>
</CustomField>