force-app/main/default/objects/Case/fields/Contract_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Follow_Up_Date__c</fullName>
    <label>Contract Follow Up Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>