force-app/main/default/objects/Case/fields/Date_Case_opened_by_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Date_Case_opened_by_Coordinator__c</fullName>
    <description>This field is editable and is to be used to show the true date of when the case was opened.</description>
    <inlineHelpText>This field is editable and is to be used to show the true date of when the case was opened.</inlineHelpText>
    <label>Date Case opened by Coordinator</label>
    <type>Date</type>
</CustomField>