force-app/main/default/objects/Case/fields/Dependent__c.field-meta.xml
<CustomField>
    <fullName>Dependent__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dependent</label>
    <referenceTo>Dependents__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>