force-app/main/default/objects/Case/fields/Dollar_value_of_financial_assistance__c.field-meta.xml
<CustomField>
    <fullName>Dollar_value_of_financial_assistance__c</fullName>
    <description>This is the dollar value of financial assistance provided by HeartKids</description>
    <inlineHelpText>This is the dollar value of financial assistance provided by HeartKids</inlineHelpText>
    <label>Dollar value of financial assistance</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>