force-app/main/default/objects/Case/fields/Dollar_value_of_in_kind_assistance__c.field-meta.xml
<CustomField>
    <fullName>Dollar_value_of_in_kind_assistance__c</fullName>
    <description>This is the estimated dollar value of the in kind assistance provide by other organisations.</description>
    <inlineHelpText>This is the estimated dollar value of the in kind assistance provide by other organisations.</inlineHelpText>
    <label>Dollar value of in kind assistance</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>