force-app/main/default/objects/Case/fields/Dollar_Value_of_Support__c.field-meta.xml
<CustomField>
    <fullName>Dollar_Value_of_Support__c</fullName>
    <description>This is the old value of financial support and should not be used now. New financial assistance information sits on the Support Occasion tab.</description>
    <inlineHelpText>This is the old value of financial support and should not be used now. New financial assistance information sits on the Support Occasion tab.</inlineHelpText>
    <label>Dollar Value of Support</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>