force-app/main/default/objects/Case/fields/ECI_Program_Commenced__c.field-meta.xml
<CustomField>
    <fullName>ECI_Program_Commenced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is to be used to indicate a record has commenced the ECI Program at HeartKids</description>
    <label>ECI Program Commenced</label>
    <type>Checkbox</type>
</CustomField>