force-app/main/default/objects/Case/fields/ECI_Program_Discharge__c.field-meta.xml
<CustomField>
    <fullName>ECI_Program_Discharge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is to be used to indicate a record has been discharged from the ECI Program at HeartKids</description>
    <label>ECI Program Discharge</label>
    <type>Checkbox</type>
</CustomField>