force-app/main/default/objects/Case/fields/Education_Training__c.field-meta.xml
<CustomField>
    <fullName>Education_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checklist for external referral</description>
    <inlineHelpText>Checklist for external referral</inlineHelpText>
    <label>Education/Training</label>
    <type>Checkbox</type>
</CustomField>