force-app/main/default/objects/Case/fields/eNewsletter_Consent__c.field-meta.xml
<CustomField>
    <fullName>eNewsletter_Consent__c</fullName>
    <description>eTapestry data brought across from old Journal Entry Contacts</description>
    <label>eNewsletter Consent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opt-in</fullName>
            </value>
            <value>
                <fullName>Opt-out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>