force-app/main/default/objects/Case/fields/External_Referrals__c.field-meta.xml
<CustomField>
    <fullName>External_Referrals__c</fullName>
    <description>External referrals made to clients</description>
    <inlineHelpText>Use this to record all external referrals made to clients</inlineHelpText>
    <label>External Referrals</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>External_Referral</valueSetName>
    </valueSet>
</CustomField>