force-app/main/default/objects/Case/fields/External_Resources_Offered__c.field-meta.xml
<CustomField>
    <fullName>External_Resources_Offered__c</fullName>
    <label>External Resources Offered</label>
    <length>255</length>
    <type>Text</type>
</CustomField>