force-app/main/default/objects/Case/fields/Financial_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Financial_Assistance__c</fullName>
    <description>This is the financial assistance HeartKids has provided</description>
    <inlineHelpText>This is the financial assistance HeartKids has provided</inlineHelpText>
    <label>Financial Assistance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Financial_Assistance</valueSetName>
    </valueSet>
</CustomField>