force-app/main/default/objects/Case/fields/Helpline_Cohort__c.field-meta.xml
<CustomField>
    <fullName>Helpline_Cohort__c</fullName>
    <label>Cohort</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Antenatal</fullName>
            </value>
            <value>
                <fullName>Infant</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Teen/Young Person</fullName>
            </value>
            <value>
                <fullName>Adult</fullName>
            </value>
            <value>
                <fullName>Parent/Carer</fullName>
            </value>
            <value>
                <fullName>Grandparent</fullName>
            </value>
            <value>
                <fullName>Extended Family</fullName>
            </value>
            <value>
                <fullName>Health Care Provider</fullName>
            </value>
            <value>
                <fullName>Community Services Provider</fullName>
            </value>
            <value>
                <fullName>Siblings</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>