force-app/main/default/objects/Case/fields/Helpline_Internal_Referral_to_Programs__c.field-meta.xml
<CustomField>
    <fullName>Helpline_Internal_Referral_to_Programs__c</fullName>
    <label>Internal Referral to Programs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Peers as Mentors</fullName>
            </value>
            <value>
                <fullName>Digital Community</fullName>
            </value>
            <value>
                <fullName>ECEI Program</fullName>
            </value>
            <value>
                <fullName>Mental Health Support</fullName>
            </value>
            <value>
                <fullName>Teen Camp</fullName>
            </value>
            <value>
                <fullName>Cohort Event</fullName>
            </value>
            <value>
                <fullName>Education Modules</fullName>
            </value>
            <value>
                <fullName>HK Connect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>