force-app/main/default/objects/Case/fields/Helpline_Theme_of_Support__c.field-meta.xml
<CustomField>
    <fullName>Helpline_Theme_of_Support__c</fullName>
    <label>Theme of Support</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advice/Resource Provision</fullName>
            </value>
            <value>
                <fullName>Allied Health</fullName>
            </value>
            <value>
                <fullName>CoHD Condition Types/Causes</fullName>
            </value>
            <value>
                <fullName>Crisis Support</fullName>
            </value>
            <value>
                <fullName>Health Care (inc. Primary networks and Dental)</fullName>
            </value>
            <value>
                <fullName>Exercise</fullName>
            </value>
            <value>
                <fullName>Financial Support</fullName>
            </value>
            <value>
                <fullName>Genetics</fullName>
            </value>
            <value>
                <fullName>Grief and Bereavement</fullName>
            </value>
            <value>
                <fullName>Growing Up</fullName>
            </value>
            <value>
                <fullName>Immunisation</fullName>
            </value>
            <value>
                <fullName>Managing Condition</fullName>
            </value>
            <value>
                <fullName>Mental Health</fullName>
            </value>
            <value>
                <fullName>Neurodevelopment</fullName>
            </value>
            <value>
                <fullName>New Diagnosis</fullName>
            </value>
            <value>
                <fullName>Pregnancy</fullName>
            </value>
            <value>
                <fullName>Rheumatic Heart Disease</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>Sexual Health</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Wellness check</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>