force-app/main/default/objects/Case/fields/HK_Resources_Offered__c.field-meta.xml
<CustomField>
    <fullName>HK_Resources_Offered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HK Resources Offered</label>
    <type>Checkbox</type>
</CustomField>