force-app/main/default/objects/Case/fields/HK_Resources_Provided__c.field-meta.xml
<CustomField>
    <fullName>HK_Resources_Provided__c</fullName>
    <label>HK Resources Provided</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Factsheets</fullName>
            </value>
            <value>
                <fullName>Podcast</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>CoHD Directory</fullName>
            </value>
            <value>
                <fullName>HK Website</fullName>
            </value>
            <value>
                <fullName>Information Pack</fullName>
            </value>
            <value>
                <fullName>Care Bag</fullName>
            </value>
            <value>
                <fullName>Heart Beads</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>