force-app/main/default/objects/Case/fields/In_Kind_Assistance__c.field-meta.xml
<CustomField>
    <fullName>In_Kind_Assistance__c</fullName>
    <description>In kind items provided to HeartKids free of charge</description>
    <inlineHelpText>In kind items provided to HeartKids free of charge</inlineHelpText>
    <label>In Kind Assistance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Kind Grocery/Fuel Voucher</fullName>
            </value>
            <value>
                <fullName>In-Kind Meal Voucher</fullName>
            </value>
            <value>
                <fullName>In-Kind Medical Equipment</fullName>
            </value>
            <value>
                <fullName>In-Kind Gifts</fullName>
            </value>
            <value>
                <fullName>Gift Voucher</fullName>
            </value>
            <value>
                <fullName>Tickets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>