force-app/main/default/objects/Case/fields/Incoming_referrals_other_description__c.field-meta.xml
<CustomField>
    <fullName>Incoming_referrals_other_description__c</fullName>
    <description>Incoming referrals outside the picklist options</description>
    <inlineHelpText>Incoming referrals outside the picklist options</inlineHelpText>
    <label>Incoming referrals other description</label>
    <length>20</length>
    <type>Text</type>
</CustomField>