force-app/main/default/objects/Case/fields/Internal_Referrals__c.field-meta.xml
<CustomField>
    <fullName>Internal_Referrals__c</fullName>
    <description>Referrals made to HeartKids from outside organisations</description>
    <inlineHelpText>Referrals made to HeartKids from outside organisations</inlineHelpText>
    <label>Incoming Referrals</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Incoming_Referrals</valueSetName>
    </valueSet>
</CustomField>