force-app/main/default/objects/Case/fields/Medical_Equipment_Hire_Purcahse__c.field-meta.xml
<CustomField>
    <fullName>Medical_Equipment_Hire_Purcahse__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checklist item for external referral</description>
    <inlineHelpText>Checklist item for external referral</inlineHelpText>
    <label>Medical Equipment Loan Agreement signed</label>
    <type>Checkbox</type>
</CustomField>