force-app/main/default/objects/Case/fields/Medical_Equipment_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Medical_Equipment_Serial_Number__c</fullName>
    <label>Medical Equipment Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>