force-app/main/default/objects/Case/fields/Mental_Health__c.field-meta.xml
<CustomField>
    <fullName>Mental_Health__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checklist item for external referral</description>
    <inlineHelpText>Checklist item for external referral</inlineHelpText>
    <label>Mental Health</label>
    <type>Checkbox</type>
</CustomField>