force-app/main/default/objects/Case/fields/Migrated_From_Task_Record__c.field-meta.xml
<CustomField>
    <fullName>Migrated_From_Task_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Migrated From Task Record</label>
    <type>Checkbox</type>
</CustomField>