force-app/main/default/objects/Case/fields/No_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>No_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Value will map from web to case Case created via the Helpline web form process</description>
    <label>No Newsletter</label>
    <type>Checkbox</type>
</CustomField>