force-app/main/default/objects/Case/fields/No_Solicitation__c.field-meta.xml
<CustomField>
    <fullName>No_Solicitation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Solicit Consent field values populated at the time of the creation of this Contact. These values was mapped to the &quot;No Solicitation&quot; checkbox on the Contact but this field does not automatically map anymore</description>
    <label>No Solicitation</label>
    <type>Checkbox</type>
</CustomField>