force-app/main/default/objects/Case/fields/Peer_Support_Network__c.field-meta.xml
<CustomField>
    <fullName>Peer_Support_Network__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checklist item for external referral</description>
    <inlineHelpText>Checklist item for external referral</inlineHelpText>
    <label>Peer Support Network</label>
    <type>Checkbox</type>
</CustomField>