force-app/main/default/objects/Case/fields/PG_On_Hold_Deferred__c.field-meta.xml
<CustomField>
    <fullName>PG_On_Hold_Deferred__c</fullName>
    <description>The child and family put their playgroup on hold or deferred because of the following reasons</description>
    <inlineHelpText>The child and family put their playgroup on hold or deferred because of the following reasons</inlineHelpText>
    <label>On Hold/Deferred</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>Family commitments</fullName>
            </value>
            <value>
                <fullName>Did not specify</fullName>
            </value>
            <value>
                <fullName>Other (please specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>