force-app/main/default/objects/Case/fields/PG_Withdrawn_from_Program__c.field-meta.xml
<CustomField>
    <fullName>PG_Withdrawn_from_Program__c</fullName>
    <description>The family and child withdrew from the playgroup program because of the following reasons</description>
    <inlineHelpText>The family and child withdrew from the playgroup program because of the following reasons</inlineHelpText>
    <label>Withdrawn from Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cardiac surgery</fullName>
            </value>
            <value>
                <fullName>Family decision</fullName>
            </value>
            <value>
                <fullName>Family moved</fullName>
            </value>
            <value>
                <fullName>Did not specify</fullName>
            </value>
            <value>
                <fullName>Other (please specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>