force-app/main/default/objects/Case/fields/Playgroup_Cohort__c.field-meta.xml
<CustomField>
    <fullName>Playgroup_Cohort__c</fullName>
    <description>The playgroup cohort the child is attending</description>
    <inlineHelpText>The playgroup cohort the child is attending</inlineHelpText>
    <label>Cohort</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Term 1</fullName>
            </value>
            <value>
                <fullName>Term 2</fullName>
            </value>
            <value>
                <fullName>Term 3</fullName>
            </value>
            <value>
                <fullName>Term 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>