force-app/main/default/objects/Case/fields/Playgroup_Session_Attended__c.field-meta.xml
<CustomField>
    <fullName>Playgroup_Session_Attended__c</fullName>
    <label>Playgroup Session Attended</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Playgroup_Session_Attended</valueSetName>
    </valueSet>
</CustomField>