force-app/main/default/objects/Case/fields/Playgroup_Session_Non_Attendance_Reason__c.field-meta.xml
<CustomField>
    <fullName>Playgroup_Session_Non_Attendance_Reason__c</fullName>
    <label>Playgroup Session Non Attendance Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Playgroup_Session_Non_Attendance_Reason</valueSetName>
    </valueSet>
</CustomField>