force-app/main/default/objects/Case/fields/Playgroup_Type__c.field-meta.xml
<CustomField>
    <fullName>Playgroup_Type__c</fullName>
    <description>The playgroup program the child is in</description>
    <inlineHelpText>The playgroup program the child is in</inlineHelpText>
    <label>ECI Group Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Playgroup - 2-3 years (Caterpillars)</fullName>
            </value>
            <value>
                <fullName>Playgroup - 3-4 years (Butterflies)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>