force-app/main/default/objects/Case/fields/Post_playgroup_questionnaire_completed__c.field-meta.xml
<CustomField>
    <fullName>Post_playgroup_questionnaire_completed__c</fullName>
    <description>Have the family filled out the post-playgroup questionnaire?</description>
    <inlineHelpText>Have the family filled out the post-playgroup questionnaire?</inlineHelpText>
    <label>Post-group questionnaire completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>