force-app/main/default/objects/Case/fields/Referred_to_ECEI_NDIS_Provider__c.field-meta.xml
<CustomField>
    <fullName>Referred_to_ECEI_NDIS_Provider__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this field if the family have been referred to an ECEI NDIS providedr</inlineHelpText>
    <label>Referred to ECEI NDIS Provider</label>
    <type>Checkbox</type>
</CustomField>