force-app/main/default/objects/Case/fields/Resources_Handed_Out__c.field-meta.xml
<CustomField>
    <fullName>Resources_Handed_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>These are the resources handed out during the ECIP sessions.</description>
    <inlineHelpText>These are the resources handed out during the ECIP sessions.</inlineHelpText>
    <label>Resources Handed Out</label>
    <type>Checkbox</type>
</CustomField>