force-app/main/default/objects/Case/fields/Support_Agency__c.field-meta.xml
<CustomField>
    <fullName>Support_Agency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checklist item for external referral</description>
    <inlineHelpText>Checklist item for external referral</inlineHelpText>
    <label>Support Agency</label>
    <type>Checkbox</type>
</CustomField>