force-app/main/default/objects/Case/fields/Support_Coordinator_Name__c.field-meta.xml
<CustomField>
    <fullName>Support_Coordinator_Name__c</fullName>
    <description>eTapestry Journal Entry values for data pre-dating 2021</description>
    <label>Support Coordinator Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Support_Coordinator_Name</valueSetName>
    </valueSet>
</CustomField>